# HIRE1-TEST-TASK

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/schemas/: common.py  payment.py  product.py  receipt.py  user.py
app/api/v1/: receipts.py  users.py
app/db/: config.py  main.py
app/db/alembic/: env.py
app/db/alembic/versions/: 2024_09_09_1621-017ba2f54f71_add_user_receipt_and_product_models.py  2024_09_12_0724-774c7c792b59_remove_total_field_from_product_table.py  2024_09_12_0809-4cecc45fb898_remove_check_constraint_for_check_.py  2024_09_12_0825-278f3047f3f3_return_total_field_for_product_table.py
app/db/models/: __init__.py  base.py  receipt.py  user.py
app/repository/: receipts.py  users.py
app/services/: auth_dependencies.py  auth_utils.py  receipts.py  users.py
app/settings/: config.py
