[tool.poetry]
name = "hire1-test-task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
pydantic = {extras = ["email"], version = "^2.9.1"}
pydantic-settings = "^2.4.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
pythonpath = [
    ".",
    "app"
]
